# mcp-sqlite-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_db.py
.agents/workflows/: README.md  skill-architecture-python.md  skill-clean-programming-python.md
app/application/use_cases/: get_users.py  query_knowledge.py
app/domain/entities/: usuario.py
app/domain/interfaces/: knowledge_repository.py  user_repository.py
app/infrastructure/adapters/: rag_langchain_adapter.py
app/infrastructure/database/: sqlite_repository.py
app/infrastructure/entrypoints/mcp/resources/: knowledge.py  queries.py  transactions.py
app/infrastructure/middleware/: mongo_config.py  rate_limit_event_middleware.py  tool_call_logging_middleware.py
etl/: medium_extractor.py  rag_agent.py  vectorizer.py
etl/output/: corpus_limpio.json
etl/specs/: 1. medium_etl_spec.md  2. vectorizer_spec.md  3. rag_agent_spec.md  4. mcp_rag_tool_spec.md
tests/: conftest.py
tests/integration/: test_mcp_server.py
tests/unit/: test_repository.py  test_use_cases.py  test_usuario.py
